<resources>
    <string name="app_name">Project5Pizza</string>
    <string name="small">Small</string>
    <string name="chicago_and_new_york_pizza">Chicago and New York Pizza</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="crust">Crust:</string>
    <string name="add_to_order">Add To Order</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="pizza_price">Pizza Price $:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pizza_type">Pizza type</string>
    <string name="store_orders">Store Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_number">Order Number</string>
    <string name="order_total">Order Total $</string>
    <string name="current_order">Current Order</string>
    <string name="subtotal">Subtotal $</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="place_order">Place Order</string>
    <string name="sales_tax">Sales Tax $</string>
    <string name="price_total">Order Total $</string>
    <string name="blank">%d</string>
    <string name="current_number">Order Number</string>
</resources>